// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonModal should render children correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginTop": 22,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#96A1A8",
          "borderColor": "#FCF8F6",
          "borderRadius": 20,
          "borderWidth": 5,
          "elevation": 5,
          "height": "25%",
          "justifyContent": "center",
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 4,
          "width": "75%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FCF8F6",
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 20,
          }
        }
      >
        test
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text>
          children rendered
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`ButtonModal should render content text 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginTop": 22,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#96A1A8",
          "borderColor": "#FCF8F6",
          "borderRadius": 20,
          "borderWidth": 5,
          "elevation": 5,
          "height": "25%",
          "justifyContent": "center",
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 4,
          "width": "75%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FCF8F6",
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 20,
          }
        }
      >
        test
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
</Modal>
`;

exports[`ButtonModal should render correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginTop": 22,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#96A1A8",
          "borderColor": "#FCF8F6",
          "borderRadius": 20,
          "borderWidth": 5,
          "elevation": 5,
          "height": "25%",
          "justifyContent": "center",
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 4,
          "width": "75%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FCF8F6",
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 20,
          }
        }
      >
        test
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
</Modal>
`;
